[gd_scene load_steps=2 format=3 uid="uid://beach_tetris"]

[ext_resource type="Script" path="res://src/ui/tetris/beach_tetris.gd" id="1_script"]

[node name="BeachTetris" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12, 0.22, 0.28, 0.98)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.75, 1)
theme_override_font_sizes/font_size = 28
text = "üèñ Ìï¥Î≥Ä ÌÖåÌä∏Î¶¨Ïä§"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="BoardContainer" type="Control" parent="VBox/HBox"]
custom_minimum_size = Vector2(280, 560)
layout_mode = 2

[node name="NextContainer" type="Control" parent="VBox/HBox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="InfoVBox" type="VBoxContainer" parent="VBox/HBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScoreLabel" type="Label" parent="VBox/HBox/InfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.88, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "Ï†êÏàò: 0"

[node name="LevelLabel" type="Label" parent="VBox/HBox/InfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 18
text = "Î†àÎ≤®: 1"

[node name="LinesLabel" type="Label" parent="VBox/HBox/InfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.9, 0.95, 1)
theme_override_font_sizes/font_size = 18
text = "ÎùºÏù∏: 0"

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="StartButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "ÏãúÏûë"

[node name="BackButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "ÎèåÏïÑÍ∞ÄÍ∏∞"

[node name="HelpButton" type="Button" parent="VBox/Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Í≤åÏûÑ Î∞©Î≤ï"

[node name="HelpPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="HelpPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="HelpPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HelpLabel" type="Label" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.85, 1)
theme_override_font_sizes/font_size = 16
text = "Î∞©Ìñ•ÌÇ§ ÏÇ¨Ïö©Î≤ï..."
autowrap_mode = 3

[node name="CloseBtn" type="Button" parent="HelpPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Îã´Í∏∞"

[node name="GameOverPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="GameOverPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Ï†êÏàò: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Îã§Ïãú ÌïòÍ∏∞"
